plot PCs against concavity (which is the wrong thing for PC2) and size (which is correct for PC1)

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -369,6 +369,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b20f000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scale_morphology.scripts.plotting import interpret_dimensions\n",
+    "\n",
+    "interpret_dimensions._plot_pca_importance(\n",
+    "    good_coeffs, np.zeros(good_coeffs.shape[0], dtype=bool)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "628f87ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizes = [np.sum(m) / 255 for m in tqdm(np.array(masks)[good_indices])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c21ad45d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sizes, transformed_coeffs[:, 0], \".\")\n",
+    "plt.xlabel(\"Scale Size (pixels?)\")\n",
+    "plt.ylabel(\"PC1\")\n",
+    "plt.title(\"The first principal component corresponds tells us about size\")\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plot_dir = pathlib.Path(\"rabia\")\n",
+    "plot_dir.mkdir(exist_ok=True)\n",
+    "plt.savefig(plot_dir /\"sizes.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5432235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import ConvexHull\n",
+    "from skimage.draw import polygon\n",
+    "\n",
+    "\n",
+    "def convex_hull_mask(mask_bool):\n",
+    "    \"\"\"Rasterize the convex hull of foreground pixels into a mask.\"\"\"\n",
+    "    ys, xs = np.nonzero(mask_bool)\n",
+    "    pts = np.stack([xs, ys], axis=1)  # (x, y)\n",
+    "    if pts.shape[0] < 3:\n",
+    "        return mask_bool.copy(), 0.0\n",
+    "    hull = ConvexHull(pts)\n",
+    "    hull_xy = pts[hull.vertices]\n",
+    "    rr, cc = polygon(hull_xy[:, 1], hull_xy[:, 0], shape=mask_bool.shape)\n",
+    "    hull_mask = np.zeros_like(mask_bool, dtype=bool)\n",
+    "    hull_mask[rr, cc] = True\n",
+    "    return hull_mask, hull.volume  # hull.volume is 2D area\n",
+    "\n",
+    "\n",
+    "def concavity_metrics(mask_bool):\n",
+    "    area = float(mask_bool.sum())\n",
+    "    if area == 0:\n",
+    "        return dict(\n",
+    "            solidity=np.nan,\n",
+    "            concavity_frac=np.nan,\n",
+    "            dent_max=np.nan,\n",
+    "            dent_mean=np.nan,\n",
+    "            dent_max_norm=np.nan,\n",
+    "            concavity_area=np.nan,\n",
+    "        )\n",
+    "\n",
+    "    hull_mask, hull_area = convex_hull_mask(mask_bool)\n",
+    "    if hull_area == 0:\n",
+    "        return dict(\n",
+    "            solidity=np.nan,\n",
+    "            concavity_frac=np.nan,\n",
+    "            dent_max=np.nan,\n",
+    "            dent_mean=np.nan,\n",
+    "            dent_max_norm=np.nan,\n",
+    "            concavity_area=np.nan,\n",
+    "        )\n",
+    "\n",
+    "    # Area-based concavity\n",
+    "    solidity = area / hull_area\n",
+    "    return 1.0 - solidity\n",
+    "\n",
+    "\n",
+    "concavity = [concavity_metrics(m == 255) for m in tqdm(np.array(masks)[good_indices])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3703b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(concavity, transformed_coeffs[:, 1], \".\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "576aad49",
    "metadata": {},
