read masks in from disk

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -187,8 +187,10 @@
     "\"\"\"\n",
     "Perform EFA on the scales and plot the reconstruction\n",
     "\"\"\"\n",
+    "import pathlib\n",
     "import importlib\n",
     "\n",
+    "import tifffile\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "from scipy.ndimage import binary_fill_holes\n",
@@ -197,13 +199,10 @@
     "n_edge_points = 200\n",
     "order = 50\n",
     "\n",
+    "masks = [255*tifffile.imread(f).astype(np.uint8) for f in tqdm(list((pathlib.Path(\"segmentation_stuff2\")/\"masks\").glob(\"*.tif\")))]\n",
+    "\n",
     "coeffs = []\n",
     "for scale in tqdm(masks):\n",
-    "    # Hack - lots of them are broken\n",
-    "    # This doesn't even work as a hack. oh well\n",
-    "    scale = segmentation._largest_connected_component(scale)\n",
-    "    scale = binary_fill_holes(scale, structure=np.ones((3, 3)))\n",
-    "    scale = (scale * 255).astype(np.uint8)\n",
     "    try:\n",
     "        coeffs.append(efa.coefficients(scale, n_edge_points, order))\n",
     "    except errors.BadImgError as e:\n",
@@ -221,6 +220,7 @@
    "source": [
     "good_indices = ~np.isnan(coeffs).any(axis=(1, 2))\n",
     "\n",
+    "mask_dir = pathlib.Path(\"segmentation_stuff2\") / \"masks\"\n",
     "good_mask_names = np.array([path.name for path in tqdm(list(mask_dir.glob(\"*.tif\")))])[\n",
     "    good_indices\n",
     "]\n",
