--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -282,11 +282,122 @@
     "\n",
     "load_index(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a17b6a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Read in a couple of the masks and look at them\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "def plot_masks(masks):\n",
+    "    fig, axes = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "    for mask, axis in zip(masks, axes.flat):\n",
+    "        im = axis.imshow(mask)\n",
+    "        axis.set_axis_off()\n",
+    "\n",
+    "    fig.colorbar(im)\n",
+    "    fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb1070a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "import tifffile\n",
+    "from itertools import islice\n",
+    "\n",
+    "mask_dir = pathlib.Path(\"segmentation_stuff\") / \"masks\"\n",
+    "\n",
+    "masks = [tifffile.imread(f) for f in islice(mask_dir.glob(\"*\"), 4)]\n",
+    "\n",
+    "plot_masks(masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33746d22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Try binary closing\n",
+    "\n",
+    "\"\"\"\n",
+    "from tqdm.notebook import tqdm\n",
+    "from skimage.morphology import binary_closing\n",
+    "\n",
+    "closed = [binary_closing(m, footprint=np.ones((25, 25))) for m in tqdm(masks)]\n",
+    "plot_masks(closed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b0ccfa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.morphology import binary_opening\n",
+    "\n",
+    "opened = [binary_opening(m, footprint=np.ones((25, 25))) for m in tqdm(masks)]\n",
+    "plot_masks(opened)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb020835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem = np.ones((25, 25))\n",
+    "processed = [\n",
+    "    binary_closing(binary_opening(m, footprint=elem), footprint=elem)\n",
+    "    for m in tqdm(masks)\n",
+    "]\n",
+    "plot_masks(processed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2ca4812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scale_morphology.scales import efa\n",
+    "\n",
+    "f = lambda x: efa.coefficients(x.astype(np.uint8)*255, 200, 50)\n",
+    "\n",
+    "f(processed[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70183e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scale-morphology (3.12.2)",
+   "display_name": "scale-morphology (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
