try lots of different sized footprints

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -352,8 +352,10 @@
    "outputs": [],
    "source": [
     "from skimage.morphology import binary_opening\n",
+    "from skimage.morphology import disk\n",
     "\n",
-    "opened = [binary_opening(m, footprint=np.ones((25, 25))) for m in tqdm(masks)]\n",
+    "footprint = disk(10)\n",
+    "opened = [binary_opening(m, footprint=footprint) for m in tqdm(masks)]\n",
     "plot_masks(opened)"
    ]
   },
@@ -392,12 +394,69 @@
    "id": "70183e4e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Experiment with a range of structuring element radii\n",
+    "\"\"\"\n",
+    "\n",
+    "masks = [tifffile.imread(f) for f in tqdm(list(mask_dir.glob(\"*\")))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d42725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scale_morphology.scales import errors\n",
+    "\n",
+    "\n",
+    "def _coeffs(masks):\n",
+    "    coeffs = []\n",
+    "    n_points, order = 200, 50\n",
+    "    for scale in tqdm(masks):\n",
+    "        try:\n",
+    "            coeffs.append(\n",
+    "                efa.coefficients((255 * scale).astype(np.uint8), n_points, order)\n",
+    "            )\n",
+    "        except (errors.BadImgError, errors.HolesError):\n",
+    "            coeffs.append(np.ones((order, 4)) * np.nan)\n",
+    "    return np.stack(coeffs)\n",
+    "\n",
+    "\n",
+    "def n_good(masks: list[np.ndarray], radius: int):\n",
+    "    footprint = np.ones((radius * 2, radius * 2))  # disk(radius)\n",
+    "    processed = [binary_opening(m, footprint=footprint) for m in tqdm(masks)]\n",
+    "\n",
+    "    coeffs = _coeffs(masks)\n",
+    "\n",
+    "    return (~np.isnan(coeffs).any(axis=(1, 2))).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68778281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radii = list(range(15))\n",
+    "n = [n_good(masks, r) for r in tqdm(radii)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a35349c4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scale-morphology (3.12.8)",
+   "display_name": "scale-morphology (3.12.2)",
    "language": "python",
    "name": "python3"
   },
@@ -411,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
