basic segmentation pipeline

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -59,7 +59,44 @@
    "source": [
     "\"\"\"\n",
     "Convert to greyscale\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from skimage.color import rgb2gray\n",
+    "\n",
+    "\n",
+    "def factor_int(n):\n",
+    "    val = math.ceil(math.sqrt(n))\n",
+    "    val2 = int(n / val)\n",
+    "    while val2 * val != float(n):\n",
+    "        val -= 1\n",
+    "        val2 = int(n / val)\n",
+    "    return val, val2\n",
+    "\n",
+    "\n",
+    "def plot_imgs(images, **plot_kw):\n",
+    "    n_figs = factor_int(len(images))\n",
+    "\n",
+    "    fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
+    "    for axis, img in zip(tqdm(axes.flat), images):\n",
+    "        axis.imshow(img, **plot_kw, cmap=\"grey\")\n",
+    "        axis.set_axis_off()\n",
+    "    fig.tight_layout()\n",
+    "\n",
+    "\n",
+    "greyscale = [rgb2gray(i) for i in tqdm(images[:16])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9f4bb2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_imgs(greyscale)"
    ]
   },
   {
@@ -70,7 +107,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Bkg subtraction\n",
+    "Bkg subtraction - cba with this rn\n",
     "\"\"\""
    ]
   },
@@ -83,7 +120,11 @@
    "source": [
     "\"\"\"\n",
     "Blur to remove noise\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "from skimage.filters import gaussian\n",
+    "\n",
+    "blurred = [gaussian(i, sigma=3) for i in tqdm(greyscale)]\n",
+    "plot_imgs(blurred)"
    ]
   },
   {
@@ -95,7 +136,21 @@
    "source": [
     "\"\"\"\n",
     "Contrast enhance\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "from skimage.exposure import equalize_adapthist\n",
+    "\n",
+    "enhanced = [equalize_adapthist(i, kernel_size=2001) for i in tqdm(blurred)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc93202d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_imgs(enhanced)"
    ]
   },
   {
@@ -107,7 +162,18 @@
    "source": [
     "\"\"\"\n",
     "Threshold\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "from skimage.filters import threshold_minimum, threshold_mean\n",
+    "\n",
+    "\n",
+    "def threshold(i):\n",
+    "    return (i < threshold_minimum(i)) | (i < threshold_mean(i))\n",
+    "\n",
+    "\n",
+    "thresholded = [threshold(i) for i in tqdm(enhanced)]\n",
+    "\n",
+    "plot_imgs(thresholded)"
    ]
   },
   {
@@ -119,7 +185,11 @@
    "source": [
     "\"\"\"\n",
     "Remove small objects\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "from skimage.segmentation import clear_border\n",
+    "a = [clear_border(i) for i in tqdm(thresholded)]\n",
+    "\n",
+    "plot_imgs(a)\n"
    ]
   },
   {
