delete a bunch of cells

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -47,7 +47,8 @@
     "for path in alp_files:\n",
     "    name, img = zip(*read.read_lif(path))\n",
     "    names += name\n",
-    "    images += img"
+    "    images += img\n",
+    "    break"
    ]
   },
   {
@@ -219,67 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86444ff3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "\n",
-    "out_dir = pathlib.Path(\"segmentation_stuff2\")\n",
-    "\n",
-    "overlaid_dir = out_dir / \"overlaid\"\n",
-    "mask_dir = out_dir / \"masks\"\n",
-    "img_dir = out_dir / \"imgs\"\n",
-    "\n",
-    "for d in overlaid_dir, mask_dir, img_dir:\n",
-    "    d.mkdir(exist_ok=True, parents=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aae4463f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Just do the segmentation\n",
-    "\"\"\"\n",
-    "\n",
-    "from multiprocessing import Pool, Manager\n",
-    "\n",
-    "import tifffile\n",
-    "from scale_morphology.scales import segmentation\n",
-    "\n",
-    "\n",
-    "def _segment(img_and_name):\n",
-    "    img, name = img_and_name\n",
-    "    mask = segmentation.classical_segmentation(img)\n",
-    "    mask_path = mask_dir / (name + \".tif\")\n",
-    "    tifffile.imwrite(mask_path, mask)\n",
-    "    return mask\n",
-    "\n",
-    "\n",
-    "imgs_and_names = zip(images, names)\n",
-    "with Manager() as manager:\n",
-    "    masks = manager.list()\n",
-    "\n",
-    "    def worker(img_and_name):\n",
-    "        mask = _segment(img_and_name)\n",
-    "        masks.append(mask)\n",
-    "\n",
-    "    # Run parallel processing\n",
-    "    with Pool(processes=16) as pool:\n",
-    "        for _ in tqdm(pool.imap(worker, imgs_and_names), total=len(images)):\n",
-    "            pass\n",
-    "\n",
-    "# Convert to normal list if needed\n",
-    "masks = list(masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f7c62b1f",
    "metadata": {},
    "outputs": [],
@@ -289,97 +229,6 @@
     "    255 * tifffile.imread(f).astype(np.uint8)\n",
     "    for f in (pathlib.Path(\"segmentation_stuff\") / \"masks\").glob(\"*.tif\")\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a21829bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Now try EFA again - it should work on the new masks\n",
-    "\"\"\"\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "from scale_morphology.scales import efa, errors\n",
-    "\n",
-    "from scipy.ndimage import binary_fill_holes\n",
-    "\n",
-    "\n",
-    "def coeffs(imgs):\n",
-    "    n_points = 200\n",
-    "    n_harmonics = 50\n",
-    "\n",
-    "    coeffs = []\n",
-    "    for scale in tqdm(imgs):\n",
-    "        try:\n",
-    "            coeffs.append(efa.coefficients(scale, n_points, n_harmonics))\n",
-    "        except errors.BadImgError as e:\n",
-    "            coeffs.append(np.ones((n_harmonics, 4)) * np.nan)\n",
-    "            print(\"!\", end=\"\")\n",
-    "\n",
-    "    return np.stack(coeffs)\n",
-    "\n",
-    "\n",
-    "old_coeffs = coeffs(old_masks)\n",
-    "new_coeffs = coeffs(masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92977b68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.isnan(old_coeffs).any(axis=(1, 2)).sum(), np.isnan(new_coeffs).any(axis=(1, 2)).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5a6367b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Build our training set by first using classical CV to perform segmentation\n",
-    "\"\"\"\n",
-    "\n",
-    "import tifffile\n",
-    "from matplotlib import colors\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scale_morphology.scales import segmentation\n",
-    "\n",
-    "\n",
-    "def clear2black_cmap() -> colors.Colormap:\n",
-    "    \"\"\"\n",
-    "    Colormap that varies from clear to black\n",
-    "    \"\"\"\n",
-    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
-    "    c_black = colors.colorConverter.to_rgba(\"black\", alpha=1)\n",
-    "    return colors.ListedColormap([c_white, c_black], \"clear2black\")\n",
-    "\n",
-    "\n",
-    "cmap = clear2black_cmap()\n",
-    "for name, img in zip(tqdm(names), images):\n",
-    "    mask_path = mask_dir / (name + \".tif\")\n",
-    "    if mask_path.exists():\n",
-    "        continue\n",
-    "    mask = segmentation.classical_segmentation(img)\n",
-    "\n",
-    "    tifffile.imwrite(mask_path, mask)\n",
-    "    tifffile.imwrite(img_dir / (name + \".tif\"), img)\n",
-    "\n",
-    "    fig, axis = plt.subplots(figsize=(5, 5))\n",
-    "    axis.imshow(img)\n",
-    "    axis.imshow(mask, cmap=cmap, alpha=0.5)\n",
-    "    axis.set_axis_off()\n",
-    "    fig.savefig(overlaid_dir / (name + \".png\"))\n",
-    "    plt.close(fig)"
    ]
   },
   {
@@ -490,135 +339,6 @@
     "masks = [tifffile.imread(f) for f in islice(mask_dir.glob(\"*\"), 4)]\n",
     "\n",
     "plot_masks(masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33746d22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Try binary closing\n",
-    "\n",
-    "\"\"\"\n",
-    "from tqdm.notebook import tqdm\n",
-    "from skimage.morphology import binary_closing\n",
-    "\n",
-    "closed = [binary_closing(m, footprint=np.ones((25, 25))) for m in tqdm(masks)]\n",
-    "plot_masks(closed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b0ccfa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skimage.morphology import binary_opening\n",
-    "from skimage.morphology import disk\n",
-    "\n",
-    "footprint = disk(10)\n",
-    "opened = [binary_opening(m, footprint=footprint) for m in tqdm(masks)]\n",
-    "plot_masks(opened)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb020835",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "elem = np.ones((25, 25))\n",
-    "processed = [\n",
-    "    binary_closing(binary_opening(m, footprint=elem), footprint=elem)\n",
-    "    for m in tqdm(masks)\n",
-    "]\n",
-    "plot_masks(processed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2ca4812",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scale_morphology.scales import efa\n",
-    "\n",
-    "f = lambda x: efa.coefficients(x.astype(np.uint8)*255, 200, 50)\n",
-    "\n",
-    "f(processed[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70183e4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Experiment with a range of structuring element radii\n",
-    "\"\"\"\n",
-    "\n",
-    "masks = [tifffile.imread(f) for f in tqdm(list(mask_dir.glob(\"*\")))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60d42725",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scale_morphology.scales import errors\n",
-    "\n",
-    "\n",
-    "def _coeffs(masks):\n",
-    "    coeffs = []\n",
-    "    n_points, order = 200, 50\n",
-    "    for scale in tqdm(masks):\n",
-    "        try:\n",
-    "            coeffs.append(\n",
-    "                efa.coefficients((255 * scale).astype(np.uint8), n_points, order)\n",
-    "            )\n",
-    "        except (errors.BadImgError, errors.HolesError):\n",
-    "            coeffs.append(np.ones((order, 4)) * np.nan)\n",
-    "    return np.stack(coeffs)\n",
-    "\n",
-    "\n",
-    "def n_good(masks: list[np.ndarray], radius: int):\n",
-    "    footprint = np.ones((radius * 2, radius * 2))  # disk(radius)\n",
-    "    processed = [binary_opening(m, footprint=footprint) for m in tqdm(masks)]\n",
-    "\n",
-    "    coeffs = _coeffs(masks)\n",
-    "\n",
-    "    return (~np.isnan(coeffs).any(axis=(1, 2))).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68778281",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radii = list(range(15))\n",
-    "n = [n_good(masks, r) for r in tqdm(radii)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a35349c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(radii, n)"
    ]
   }
  ],
