--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -187,22 +187,28 @@
     "\"\"\"\n",
     "Remove small objects\n",
     "\"\"\"\n",
-    "from skimage.segmentation import clear_border\n",
-    "a = [clear_border(i) for i in tqdm(thresholded)]\n",
     "\n",
-    "plot_imgs(a)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb20b98a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Fill holes\n",
-    "\"\"\""
+    "import sys\n",
+    "import numpy as np\n",
+    "from skimage.segmentation import clear_border\n",
+    "\n",
+    "\n",
+    "def clear_border_keep_large(img):\n",
+    "    \"\"\"\n",
+    "    Clear border but dont do anything if it would remove too much\n",
+    "    \"\"\"\n",
+    "    sum_before = np.sum(img)\n",
+    "    cleared = clear_border(img)\n",
+    "\n",
+    "    if np.sum(cleared) < 0.1 * sum_before:\n",
+    "        print(\"large obj touching border\", file=sys.stderr)\n",
+    "        return img\n",
+    "    return cleared\n",
+    "\n",
+    "\n",
+    "a = [clear_border_keep_large(i) for i in tqdm(thresholded)]\n",
+    "\n",
+    "plot_imgs(a)"
    ]
   },
   {
@@ -214,7 +220,76 @@
    "source": [
     "\"\"\"\n",
     "Binary opening\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "from skimage.morphology import binary_opening, disk\n",
+    "\n",
+    "elem = disk(10)\n",
+    "opened = [binary_opening(i, elem) for i in tqdm(a)]\n",
+    "\n",
+    "plot_imgs(opened)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de0e793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Fill holes\n",
+    "\"\"\"\n",
+    "from scipy.ndimage import binary_fill_holes\n",
+    "\n",
+    "filled = [binary_fill_holes(i) for i in tqdm(opened)]\n",
+    "plot_imgs(filled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79015c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Remove small objects\n",
+    "\"\"\"\n",
+    "\n",
+    "from scipy.ndimage import label\n",
+    "\n",
+    "\n",
+    "def _largest_connected_component(binary_array):\n",
+    "    \"\"\"\n",
+    "    Return the largest connected component of a binary array, as a binary array\n",
+    "\n",
+    "    :param binary_array: Binary array.\n",
+    "    :returns: Largest connected component.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    labelled, _ = label(binary_array, np.ones((3, 3)))\n",
+    "\n",
+    "    # Find the size of each component\n",
+    "    sizes = np.bincount(labelled.ravel())\n",
+    "    sizes[0] = 0\n",
+    "\n",
+    "    retval = labelled == np.argmax(sizes)\n",
+    "    return retval\n",
+    "\n",
+    "\n",
+    "final = [_largest_connected_component(i) for i in tqdm(filled)]\n",
+    "\n",
+    "plot_imgs(final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af77e994",
+   "metadata": {},
+   "source": [
+    "Edit the masks manually\n",
+    "----"
    ]
   },
   {
