plot mask diffs

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -38,7 +38,19 @@
     "parent_dir = pathlib.Path(\"~/zebrafish_rdsf/Rabia/SOST scales\").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
-    "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem in {\".DS_Store\", \"TIFs\"})"
+    "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem in {\".DS_Store\", \"TIFs\"})\n",
+    "\n",
+    "out_dir = pathlib.Path(\"segmentation/\")\n",
+    "\n",
+    "img_dir = out_dir / \"images\"\n",
+    "sam_mask_dir = out_dir / \"sam_masks\"\n",
+    "mask_diff_dir = out_dir / \"mask_diffs\"\n",
+    "mask_prior_dir = out_dir / \"mask_priors\"\n",
+    "\n",
+    "img_dir.mkdir(exist_ok=True)\n",
+    "sam_mask_dir.mkdir(exist_ok=True)\n",
+    "mask_prior_dir.mkdir(exist_ok=True, parents=True)\n",
+    "mask_diff_dir.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -219,11 +231,6 @@
     "\n",
     "import tifffile\n",
     "\n",
-    "out_dir = pathlib.Path(\"segmentation/\")\n",
-    "\n",
-    "mask_prior_dir = out_dir / \"mask_priors\"\n",
-    "mask_prior_dir.mkdir(exist_ok=True, parents=True)\n",
-    "\n",
     "for mask, name in zip(final, tqdm(names)):\n",
     "    tifffile.imwrite(mask_prior_dir / (name + \".tif\"), mask)"
    ]
@@ -236,9 +243,6 @@
    "outputs": [],
    "source": [
     "\"\"\"Also save the originals\"\"\"\n",
-    "\n",
-    "img_dir = out_dir / \"images\"\n",
-    "img_dir.mkdir(exist_ok=True)\n",
     "\n",
     "for img, name in zip(images, tqdm(names)):\n",
     "    tifffile.imwrite(img_dir / (name + \".tif\"), img)"
@@ -394,15 +398,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ae7fd0",
+   "id": "60b89f8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sam_mask_dir = out_dir / \"sam_masks\"\n",
-    "sam_mask_dir.mkdir()\n",
-    "\n",
     "for mask, name in zip(sam_masks, tqdm(names)):\n",
     "    tifffile.imwrite(sam_mask_dir / (name + \".tif\"), mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27dae3ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Make some plots showing pixels in both/neither/one/mask\n",
+    "\"\"\"\n",
+    "\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "cmap = ListedColormap([plt.cm.tab10(i) for i in range(4)])\n",
+    "\n",
+    "final, sam_masks, imgs = [], [], []\n",
+    "for rough_path, sam_path, img_path in zip(\n",
+    "    tqdm(sorted(list(mask_prior_dir.glob(\"*\")))),\n",
+    "    sorted(list(sam_mask_dir.glob(\"*\"))),\n",
+    "    sorted(list(img_dir.glob(\"*\"))),\n",
+    "):\n",
+    "    name = rough_path.stem\n",
+    "    assert name == sam_path.stem == img_path.stem\n",
+    "\n",
+    "    prior = tifffile.imread(rough_path)\n",
+    "    mask = tifffile.imread(sam_path)\n",
+    "    img = tifffile.imread(img_path)\n",
+    "\n",
+    "    both = prior + 2 * mask\n",
+    "    fig, axis = plt.subplots()\n",
+    "\n",
+    "    axis.imshow(img, cmap=\"grey\")\n",
+    "    im = axis.imshow(both, cmap=cmap, alpha=0.5, interpolation=\"none\")\n",
+    "\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "    cbar = fig.colorbar(im, ticks=range(4))\n",
+    "    cbar.ax.set_yticklabels([\"Neither\", \"Prior Only\", \"SAM Only\", \"Both\"])\n",
+    "\n",
+    "    fig.savefig(mask_diff_dir / (name + \".png\"))\n",
+    "    plt.close(fig)"
    ]
   },
   {
