--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -46,11 +46,13 @@
     "sam_mask_dir = out_dir / \"sam_masks\"\n",
     "mask_diff_dir = out_dir / \"mask_diffs\"\n",
     "mask_prior_dir = out_dir / \"mask_priors\"\n",
+    "cleaned_mask_dir = out_dir / \"cleaned_masks\"\n",
     "\n",
+    "mask_prior_dir.mkdir(exist_ok=True, parents=True)\n",
     "img_dir.mkdir(exist_ok=True)\n",
     "sam_mask_dir.mkdir(exist_ok=True)\n",
-    "mask_prior_dir.mkdir(exist_ok=True, parents=True)\n",
-    "mask_diff_dir.mkdir(exist_ok=True)"
+    "mask_diff_dir.mkdir(exist_ok=True)\n",
+    "cleaned_mask_dir.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -463,33 +465,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c62b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masks = [255 * tifffile.imread(f).astype(np.uint8) for f in mask_dir.glob(\"*.tif\")]\n",
-    "old_masks = [\n",
-    "    255 * tifffile.imread(f).astype(np.uint8)\n",
-    "    for f in (pathlib.Path(\"segmentation_stuff\") / \"masks\").glob(\"*.tif\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "869a2353",
    "metadata": {},
    "outputs": [],
    "source": [
     "import napari\n",
-    "import numpy as np\n",
     "import tifffile\n",
-    "from pathlib import Path\n",
+    "import numpy as np\n",
     "\n",
-    "mask_paths = sorted(mask_dir.glob(\"*.tif\"))\n",
+    "# Which image to start at\n",
+    "start = 0\n",
+    "\n",
+    "mask_paths = sorted(sam_mask_dir.glob(\"*.tif\"))\n",
     "img_paths = {p.name: img_dir / p.name for p in mask_paths}\n",
-    "\n",
-    "state = {\"i\": 0, \"viewer\": None, \"labels\": None}\n",
     "\n",
     "\n",
     "def load_index(i):\n",
@@ -508,11 +496,12 @@
     "\n",
     "def save_current():\n",
     "    name = mask_paths[state[\"i\"]].name\n",
-    "    out_path = out_dir / \"cleaned_masks\" / name\n",
+    "    out_path = cleaned_mask_dir / name\n",
     "    tifffile.imwrite(out_path, (state[\"labels\"].data > 0).astype(np.uint8) * 255)\n",
     "    print(f\"Saved {out_path}\")\n",
     "\n",
     "\n",
+    "state = {\"i\": start, \"viewer\": None, \"labels\": None}\n",
     "viewer = napari.Viewer()\n",
     "state[\"viewer\"] = viewer\n",
     "\n",
@@ -530,7 +519,7 @@
     "        load_index(state[\"i\"])\n",
     "\n",
     "\n",
-    "@viewer.bind_key(\"p\")\n",
+    "@viewer.bind_key(\"b\")\n",
     "def _prev(v):\n",
     "    save_current()\n",
     "    if state[\"i\"] > 0:\n",
@@ -538,13 +527,13 @@
     "        load_index(state[\"i\"])\n",
     "\n",
     "\n",
-    "load_index(0)"
+    "load_index(state[\"i\"])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scale-morphology (3.12.2)",
+   "display_name": "scale-morphology (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
